src/test/ui/pattern/usefulness/integer-ranges/pointer-sized-int.allow.stderr
error[E0004]: non-exhaustive patterns: type `usize` is non-empty
  --> $DIR/pointer-sized-int.rs:48:11
   |
LL |     match 7usize {}
   |           ^^^^^^
   |
   = note: the matched value is of type `usize`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match 7usize {
LL +         _ => todo!(),
LL +     }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
